--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ nav img{
 .hero-btn{
     display: inline-block;
     text-decoration: none;
-    color: white;
-    border: 1px solid white;
+    color: #3682f4;
+    border: 1px solid #3682f4;
     padding: 12px 34px;
     font-size: 13px;
     background: transparent;
@@ -102,6 +102,26 @@ nav img{
     border: 1px solid #3682f4;
     background: #3682f4;
     transition: 1s;
+    color: white;
+}
+
+.hero-btn2{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: auto;
+}
+
+.hero-btn2:hover{
+    border: 1px solid #3682f4;
+    background: #3682f4;
+    transition: 1s;
+    color: white;
 }
 
 
@@ -252,6 +272,7 @@ h3{
     margin-bottom: 25px;
     margin-top: 25px;
     font-weight: 600;
+    color: white;
 }
 
 .icons .fa-brands{
@@ -261,28 +282,31 @@ h3{
     padding: 18px 0;
 }
 
+/* ---- FORM ----  */
 .container{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background: #0000000E5;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -100px;
 }
 
 form{
-    background: #3682f4;
+    background: rgb(114, 111, 111);
     display: flex;
     flex-direction: column;
-    padding: 2vw 4vw;
-    width: 90%;
+    padding: 1vw 2vw;
+    width: 75%;
     max-width: 600px;
     border-radius: 10px;
 }
 form h2{
-    color: #555;
+    color: white;
     font-weight: 800;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 form input, form textarea{
@@ -297,15 +321,39 @@ form input, form textarea{
 
 form button{
     padding: 15px;
-    background: rgb(114, 111, 111);
-    color: white;
+    background: #3682f4;
     font-size: 18px;
-    border: 0;
     outline: none;
     cursor: pointer;
     width: 150px;
     margin: 20px auto 0;
     border-radius: 30px;
+    border: 1px solid black;
 }
 
+@media(max-width: 700px){
+    form h2{
+        font-weight: 600;
+    }
+    form input, form textarea{
+        border: 0;
+        margin: 8px 2px 2px 2px;
+        padding: 10px;
+        outline: none;
+        background: white;
+        font-size: 15px;
+        border-radius: 5px;
+    }
+    form button{
+        padding: 8px;
+        background: #3682f4;
+        font-size: 14px;
+        outline: none;
+        cursor: pointer;
+        width: 150px;
+        margin: 20px auto 0;
+        border-radius: 30px;
+        border: 1px solid black;
+    }
+}
     
