--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ nav img{
     color: white;
 }
 
+/*  CONVERTIDO A BOTÓN
 .hero-btn{
     display: inline-block;
     text-decoration: none;
@@ -103,7 +104,7 @@ nav img{
     background: #3682f4;
     transition: 1s;
     color: white;
-}
+} */
 
 .hero-btn2{
     display: inline-block;
@@ -118,6 +119,33 @@ nav img{
 }
 
 .hero-btn2:hover{
+    border: 1px solid #3682f4;
+    background: #3682f4;
+    transition: 1s;
+    color: white;
+}
+
+.modal{
+    border: none;
+}
+
+.modal::backdrop {
+    background: rgb(0 0 0 / 0.4);
+  }
+
+.button{
+    display: inline-block;
+    text-decoration: none;
+    color: #3682f4;
+    border: 1px solid #3682f4;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.button:hover{
     border: 1px solid #3682f4;
     background: #3682f4;
     transition: 1s;
@@ -289,12 +317,12 @@ h3{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -100px;
+    background: rgb(0 0 0 / 0.0);
 }
 
 form{
     background: rgb(114, 111, 111);
-    display: flex;
+    display: grid;
     flex-direction: column;
     padding: 1vw 2vw;
     width: 75%;
@@ -318,7 +346,7 @@ form input, form textarea{
     border-radius: 5px;
 }
 
-form button{
+form .send{
     padding: 15px;
     background: #3682f4;
     font-size: 18px;
@@ -328,6 +356,15 @@ form button{
     margin: 20px auto 0;
     border-radius: 30px;
     border: 1px solid black;
+}
+form .closeForm{
+    padding: 5px;
+    outline: none;
+    cursor: pointer;
+    background: none;
+    border: 0;
+    width: 5%;
+    margin-left: 95%;
 }
 
 @media(max-width: 700px){
