--- a/style.css
+++ b/style.css
@@ -23,55 +23,12 @@ body{
     background-color: rgba(0, 0, 0, 0.897);
 }
 
-nav{
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav img{
-    width: 70px;
-}
-
-.nav-links{
-    flex: 1;
-    text-align: right;
-}
-
-.nav-links ul li{
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-}
-
-.nav-links ul li a{
-    color: #3682f4;
-    text-decoration: none;
-    font-size: 13px;
-}
-
-.nav-links ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: black;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.nav-links ul li:hover::after{
-    width: 100%;
-}
-
 .text-box{
     width: 90%;
     color: white    ;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 35%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
@@ -155,6 +112,9 @@ nav img{
 
 /* USO MEDIA PARA LA ACCESIBILIDAD DE DISPOSITIVOS DE OTRO TAMAÑO */
 @media(max-width: 700px){ 
+    .text-box{
+        left: 50%;
+    }
     .text-box h1{
         font-size: 20px;
     }
@@ -297,8 +257,8 @@ h3{
 }
 
 .footer h4{
-    margin-bottom: 25px;
-    margin-top: 25px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     font-weight: 600;
     color: white;
 }
@@ -369,9 +329,18 @@ form .closeForm{
 }
 
 @media(max-width: 700px){
+    .container{
+        left: 5%;
+    }
+    form{
+        width: 100%;
+        max-width: 600px;
+    }
+    
     form h2{
         font-weight: 600;
     }
+
     form input, form textarea{
         margin: 8px 2px 2px 2px;
         padding: 10px;
