--- a/style.css
+++ b/style.css
@@ -328,6 +328,12 @@ form .closeForm{
     margin-left: 95%;
 }
 
+@media(max-width: 1000px){
+    .text-box{
+        left: 50%;
+    }
+}
+
 @media(max-width: 700px){
     .container{
         left: 5%;
