--- a/style.css
+++ b/style.css
@@ -162,6 +162,15 @@ body{
     padding: 0;
     font-size: 16px;
 }
+.cta a{
+    display: grid;
+    width: 10%;
+    margin-top: 10px;
+    left: 43%;
+}
+.cta a:hover{
+    cursor: pointer;
+}
 
 h1{
     font-size: 36px;
@@ -169,7 +178,7 @@ h1{
     color: white;
 }
 
-p{
+a{
     color: #777;
     font-size: 14px;
     font-weight: 300;
