--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ h3{
     font-weight: 600;
     margin: 10px 0;
 }
+h4{
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
 
 /* ---- UBICACIONES ----*/
 .ubicaciones{
@@ -237,6 +242,7 @@ h3{
 
 .layer:hover{
     background: #3682f4;
+    opacity: 0.8;
 }
 
 .layer h3{
@@ -244,6 +250,7 @@ h3{
     font-weight: 500;
     color: white;
     font-size: 26px;
+    top: 40%;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -255,6 +262,10 @@ h3{
 .layer:hover h3{
     bottom: 49%;
     opacity: 1;
+}
+
+.city{
+    font-size: 18px;
 }
 
 /* ---- FOOTER ---- */
